alteração do tamanho da seta para mobile

--- a/css/luffy.css
+++ b/css/luffy.css
@@ -155,7 +155,7 @@ img {
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
   .sidenav::after {
-    content: '🡆';
+    content: '→';
     position: absolute;
     top: 5px;
     right: 30px;
