--- a/css/nami.css
+++ b/css/nami.css
@@ -43,21 +43,19 @@ img {
       "header header header"
       "sidenav content content"
       "sidenav anuncios anuncios"
-      "footer footer footer" 
-    ;
+      "footer footer footer";
   }
 }
 
 @media (max-width: 760px) {
   .estrutura {
     grid-template-columns: 100%;
-    grid-template-areas: 
+    grid-template-areas:
       "header"
       "sidenav"
       "content"
       "anuncios"
-      "footer"
-    ;
+      "footer";
   }
 }
 
@@ -65,7 +63,7 @@ img {
 
 .header {
   grid-area: header;
-  background: linear-gradient(135deg, #ffa500, #f0ac47);
+  background: linear-gradient(135deg, #292929, #4e4e4e);
   padding: 30px;
   display: grid;
   grid-template-columns: 1fr auto;
@@ -86,13 +84,13 @@ img {
   padding: 10px;
   color: white;
   font-size: 1.125em;
-  background: rgba(0, 0, 0, .1);
+  background: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   transition: 0.1s;
 }
 
 .header nav a:hover {
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .header li + li {
@@ -101,7 +99,7 @@ img {
 
 @media (max-width: 760px) {
   .header {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr auto;
   }
   .logo {
     max-width: 80px;
@@ -132,7 +130,7 @@ img {
   padding: 20px;
   border-radius: 5px;
   box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
-  transition: .1s ease-out;
+  transition: 0.1s ease-out;
 }
 
 .sidenav li a:hover {
@@ -156,12 +154,12 @@ img {
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
   .sidenav::after {
-    content: '→';
+    content: "→";
     position: absolute;
     top: 5px;
     right: 30px;
-    color: rgba(0, 0, 0, .3);
-    animation: seta .5s ease-in 0s infinite alternate;
+    color: rgba(0, 0, 0, 0.3);
+    animation: seta 0.5s ease-in 0s infinite alternate;
   }
   .sidenav ul {
     display: flex;
@@ -214,7 +212,7 @@ p {
   font-size: 1.2em;
   line-height: 1.6;
   letter-spacing: -0.005em;
-  color: rgba(0, 0, 0, .7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .informacoes p + p {
@@ -256,7 +254,7 @@ p {
 
 .caracteristicas span {
   display: block;
-  color: #EEEDED;
+  color: #eeeded;
 }
 
 .caracteristicas > div:first-child {
@@ -264,14 +262,14 @@ p {
 }
 
 .numero {
-  color: #EEEDED;
+  color: #eeeded;
   font-size: 3em;
   line-height: 1;
   margin: 10px auto;
 }
 
 .rotulo {
-  background: #321E1E;
+  background: #321e1e;
   border-radius: 0 0 5px 5px;
   padding: 5px 0;
   position: relative;
@@ -284,7 +282,8 @@ p {
   max-width: 16em;
 }
 
-.citacao, .atributos {
+.citacao,
+.atributos {
   align-self: start;
   padding: 30px;
   border-radius: 5px;
@@ -295,13 +294,13 @@ p {
   font-size: 1.5em;
   font-style: italic;
   text-align: center;
-  color: #321E1E;
+  color: #321e1e;
   max-width: 500px;
   margin: 0 auto;
 }
 
 .atributos li {
-  color: #321E1E;
+  color: #321e1e;
   font-weight: bold;
   font-family: Courier, monospace;
   font-size: 1.125em;
@@ -329,7 +328,7 @@ p {
 
 .footer {
   grid-area: footer;
-  background: linear-gradient(135deg, #ffa500, #f0ac47);
+  background: linear-gradient(135deg, #292929, #4e4e4e);
 }
 
 .footer p {
